--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,9 @@ jobs:
               echo "DVC already initialized"
             fi
             dvc remote add -d storage gdrive://${GDRIVE_FOLDER_ID}
-            if [ ! -z "${GDRIVE_CREDENTIALS_DATA}" ]; then
+            if [ ! -z "${GDRIVE_CONFIG_B64}" ]; then
               # Create credentials from environment variable
-              echo ${GDRIVE_CREDENTIALS_DATA} > /tmp/gdrive_credentials.json
+              echo "${GDRIVE_CONFIG_B64}" | base64 --decode > /tmp/gdrive_credentials.json
               dvc remote modify storage gdrive_use_service_account true
               dvc remote modify storage gdrive_service_account_json_file_path /tmp/gdrive_credentials.json
             fi
